# fastapi-serverless-data

./: .gitignore  package-lock.json  package.json  pyproject.toml  readme.md  serverless.yml
.serverless/: cloudformation-template-update-stack.json  requirements  requirements.txt  serverless-state.json
app/: athena.py  main.py  models.py  test.py
tests/: conftest.py  test_athena.py  test_main.py  test_s3.py
