[tool.poetry]
name = "fastapi-serverless-api"
version = "0.1.0"
description = ""
authors = ["tim frazer <tim@littlebigthings.co>"]

[tool.poetry.dependencies]
python = "^3.8"
mangum = "^0.11.0"
fastapi = "^0.65.2"
requests = "^2.25.1"
boto3 = "^1.17.95"
coverage = "^5.5"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
uvicorn = "^0.14.0"
moto = "^2.0.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
